deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-redirects
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache-redirects
  template:
    metadata:
      labels:
        app: apache-redirects
    spec:
      containers:
      - name: apache
        image: httpd:2.4
        ports:
        - containerPort: 80
        volumeMounts:
        - name: apache-config
          mountPath: /usr/local/apache2/conf/redirects.conf
          subPath: redirects.conf
        - name: apache-main-config
          mountPath: /usr/local/apache2/conf/httpd.conf
          subPath: httpd.conf
      volumes:
      - name: apache-config
        configMap:
          name: apache-redirects-config
      - name: apache-main-config
        configMap:
          name: apache-main-config
---
apiVersion: v1
kind: Service
metadata:
  name: apache-redirects
spec:
  selector:
    app: apache-redirects
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
